Add some work experience, fix css on mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <header>
       <h1 class="underline">Hi, I'm Adam</h1>
-      <p>I like putting things on the internet</p>
+      <p>
+        I'm a front end web developer with a passion for learning new things.
+      </p>
       <span>
         <a href="https://github.com/artulloss"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/adam-tulloss/"
@@ -49,24 +51,35 @@
         <h2 class="fs1">Education</h2>
         <div class="flex-apart-wrap">
           <h3>Tech Elevator</h3>
-          <strong>2020 – 2020</strong>
+          <strong class="fs3">2020 – 2020</strong>
         </div>
         <p>.NET Web Application Development Bootcamp</p>
         <div class="flex-apart-wrap">
           <h3>Princeton High School</h3>
-          <strong>2016 - 2020</strong>
+          <strong class="fs3">2016 - 2020</strong>
         </div>
         <p>Honors Diploma / Graduated Third</p>
         <div class="flex-apart-wrap">
           <h3>University of Cincinnati</h3>
-          <strong>2019 - 2020</strong>
+          <strong class="fs3">2019 - 2020</strong>
         </div>
         <p>Early College Program in Information Technology</p>
         <div class="flex-apart-wrap">
           <h3>Sinclair Community College</h3>
-          <strong>2018 - 2019</strong>
+          <strong class="fs3">2018 - 2019</strong>
         </div>
         <p>Early College Program in Information Technology</p>
+      </section>
+      <section>
+        <h2 class="fs1">Projects</h2>
+        <ul>
+          <li><a href="https://ogl.ink">Open Graph Link Shortener</a></li>
+          <li>
+            <a href="https://github.com/artulloss/te-capstone-workout-builder"
+              >Workout Builder Capstone</a
+            >
+          </li>
+        </ul>
       </section>
       <div class="dots">
         <i class="fas fa-circle red"></i>
