Open Graph Data

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About me</title>
+    <title>Personal Site</title>
+    <meta property="og:title" content="Adam Tulloss - Personal Website" />
+    <meta
+      property="og:description"
+      content="Personal website built with Threejs"
+    />
+    <meta
+      property="og:image"
+      content="https://twemoji.maxcdn.com/2/svg/2728.svg"
+    />
   </head>
   <body>
     <header>
