Contact role = button

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           href="#contact"
           data-micromodal-trigger="contact-modal"
           aria-label="Contact"
+          role="button"
           ><i class="far fa-paper-plane"></i
         ></a>
       </span>
