Add Ring Designer to works done

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       <section>
         <h2 class="fs1">Projects</h2>
         <ul>
+          <li><a href="https://richterphillips.com/ring-designer" rel="noreferrer">Ring Designer - R&P Jewelers</a></li>
           <li><a href="https://ogl.ink">Open Graph Link Shortener</a></li>
           <li>
             <a href="https://github.com/artulloss/te-capstone-workout-builder"
