Update college status

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
       <section>
         <h2 class="fs1">Education</h2>
         <div class="flex-apart-wrap">
+          <h3>University of Cincinnati</h3>
+          <strong class="fs3">2021 - Current</strong>
+        </div>
+        <p>Completing degree in Information Technology</p>
+        <div class="flex-apart-wrap">
           <h3>Tech Elevator</h3>
           <strong class="fs3">2020 – 2020</strong>
         </div>
