--- a/index.html
+++ b/index.html
@@ -121,8 +121,29 @@
       <section>
         <h2 class="fs1">Projects</h2>
         <ul>
-          <li><a href="https://richterphillips.com/ring-designer" rel="noreferrer">Ring Designer - R&P Jewelers</a></li>
+          <li>
+            <a href="https://emdrconsulting.com/consultations/" rel="noreferrer"
+              >Consultation Scheduling System - EMDR Consulting</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://emdrconsulting.com/therapist/find-a-therapist/"
+              rel="noreferrer"
+              >Find a Therapist - EMDR Consulting</a
+            >
+          </li>
+          <li>
+            <a href="https://designer.richterphillips.com" rel="noreferrer"
+              >Ring Designer - R&P Jewelers</a
+            >
+          </li>
           <li><a href="https://ogl.ink">Open Graph Link Shortener</a></li>
+          <li>
+            <a href="https://amgardens.org/obituaries/"
+              >Obituaries - Arlington Memorial Gardens</a
+            >
+          </li>
           <li>
             <a href="https://github.com/artulloss/te-capstone-workout-builder"
               >Workout Builder Capstone</a
