Add estimated graduation

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2 class="fs1">Education</h2>
         <div class="flex-apart-wrap">
           <h3>University of Cincinnati</h3>
-          <strong class="fs3">2021 - Current</strong>
+          <strong class="fs3">Fall 2021 - Spring 2025</strong>
         </div>
         <p>Completing degree in Information Technology</p>
         <div class="flex-apart-wrap">
